hir/src/snapshots/transmute_hir__hir_print__tests__arrays_of_structs.snap
---
source: hir/src/hir_print.rs
expression: s
---
                      +- stmt:0
=    sid:1     tid:1     +- Namespace name=<root>
                            +- stmt:1
=    sid:2     tid:1        |  +- Namespace name=core
                            |     +- stmts=[]
                            +- stmt:6
=   sid:12     tid:8        |  +- Struct name=Point
=   sid:36     tid:4        |     +- x: number
=   sid:37     tid:4        |     +- y: number
                            +- stmt:14
=   sid:35    tid:19        |  +- Fn name=main
                            |     +- annotations=[]
                            |     +- params=[]
@              tid:1        |     +- ret=[]
@              tid:2        |     +- body:expr:45
@              tid:2        |        +- Block
                            |           +- stmt:7
=   sid:38     tid:4        |           |  +- Let name=n
@              tid:4        |           |     +- expr:6
@              tid:4        |           |        +- Call
@             tid:17        |           |           +- callee:expr:0
@   sid:33    tid:17        |           |           |  +- Ident: number_parse
                            |           |           +- params
@              tid:7        |           |              +- expr:5
@              tid:7        |           |                 +- Call
@             tid:15        |           |                    +- callee:expr:1
@   sid:31    tid:15        |           |                    |  +- Ident: list_get
                            |           |                    +- params
@              tid:6        |           |                       +- expr:3
@              tid:6        |           |                       |  +- Call
@             tid:14        |           |                       |     +- callee:expr:2
@   sid:30    tid:14        |           |                       |     |  +- Ident: args
                            |           |                       |     +- params=[]
@              tid:4        |           |                       +- expr:4
@              tid:4        |           |                          +- Number: 1
                            |           +- stmt:8
=   sid:39    tid:20        |           |  +- Let name=square
@             tid:20        |           |     +- expr:13
@             tid:20        |           |        +- ArrayInstantiate
@              tid:8        |           |           +- expr:9
@   sid:12     tid:8        |           |           |  +- StructInstantiate name=Point
@   sid:36     tid:4        |           |           |     +- field name=x
@              tid:4        |           |           |     |  +- expr:7
@              tid:4        |           |           |     |     +- Number: 0
@   sid:37     tid:4        |           |           |     +- field name=y
@              tid:4        |           |           |        +- expr:8
@              tid:4        |           |           |           +- Number: 0
@              tid:8        |           |           +- expr:12
@   sid:12     tid:8        |           |              +- StructInstantiate name=Point
@   sid:36     tid:4        |           |                 +- field name=x
@              tid:4        |           |                 |  +- expr:10
@   sid:38     tid:4        |           |                 |     +- Ident: n
@   sid:37     tid:4        |           |                 +- field name=y
@              tid:4        |           |                    +- expr:11
@   sid:38     tid:4        |           |                       +- Ident: n
                            |           +- stmt:9
@              tid:4        |           |  +- Expression
@              tid:4        |           |     +- expr:19
@              tid:4        |           |        +- Assignment
@              tid:4        |           |           +- target:expr:17
@   sid:36     tid:4        |           |           |  +- Access
@              tid:8        |           |           |     +- lhs:expr:16
@              tid:8        |           |           |     |  +- ArrayAccess
@             tid:20        |           |           |     |     +- expr:14
@   sid:39    tid:20        |           |           |     |     |  +- Ident: square
@              tid:4        |           |           |     |     +- expr:15
@              tid:4        |           |           |     |        +- Number: 0
@   sid:36     tid:4        |           |           |     +- ident=x
@              tid:4        |           |           +- value:expr:18
@              tid:4        |           |              +- Number: 1
                            |           +- stmt:10
=   sid:40     tid:8        |           |  +- Let name=s0
@              tid:8        |           |     +- expr:22
@              tid:8        |           |        +- ArrayAccess
@             tid:20        |           |           +- expr:20
@   sid:39    tid:20        |           |           |  +- Ident: square
@              tid:4        |           |           +- expr:21
@              tid:4        |           |              +- Number: 0
                            |           +- stmt:11
@              tid:4        |           |  +- Expression
@              tid:4        |           |     +- expr:26
@              tid:4        |           |        +- Assignment
@              tid:4        |           |           +- target:expr:24
@   sid:37     tid:4        |           |           |  +- Access
@              tid:8        |           |           |     +- lhs:expr:23
@   sid:40     tid:8        |           |           |     |  +- Ident: s0
@   sid:37     tid:4        |           |           |     +- ident=y
@              tid:4        |           |           +- value:expr:25
@              tid:4        |           |              +- Number: 1
                            |           +- stmt:12
=   sid:41     tid:4        |           |  +- Let name=area
@              tid:4        |           |     +- expr:41
@              tid:4        |           |        +- Call
@              tid:9        |           |           +- callee:expr:54
@   sid:20     tid:9        |           |           |  +- Ident: mul
                            |           |           +- params
@              tid:4        |           |              +- expr:33
@              tid:4        |           |              |  +- Call
@              tid:9        |           |              |     +- callee:expr:52
@   sid:16     tid:9        |           |              |     |  +- Ident: sub
                            |           |              |     +- params
@              tid:4        |           |              |        +- expr:30
@   sid:36     tid:4        |           |              |        |  +- Access
@              tid:8        |           |              |        |     +- lhs:expr:29
@              tid:8        |           |              |        |     |  +- ArrayAccess
@             tid:20        |           |              |        |     |     +- expr:27
@   sid:39    tid:20        |           |              |        |     |     |  +- Ident: square
@              tid:4        |           |              |        |     |     +- expr:28
@              tid:4        |           |              |        |     |        +- Number: 1
@   sid:36     tid:4        |           |              |        |     +- ident=x
@              tid:4        |           |              |        +- expr:32
@   sid:36     tid:4        |           |              |           +- Access
@              tid:8        |           |              |              +- lhs:expr:31
@   sid:40     tid:8        |           |              |              |  +- Ident: s0
@   sid:36     tid:4        |           |              |              +- ident=x
@              tid:4        |           |              +- expr:40
@              tid:4        |           |                 +- Call
@              tid:9        |           |                    +- callee:expr:53
@   sid:16     tid:9        |           |                    |  +- Ident: sub
                            |           |                    +- params
@              tid:4        |           |                       +- expr:37
@   sid:37     tid:4        |           |                       |  +- Access
@              tid:8        |           |                       |     +- lhs:expr:36
@              tid:8        |           |                       |     |  +- ArrayAccess
@             tid:20        |           |                       |     |     +- expr:34
@   sid:39    tid:20        |           |                       |     |     |  +- Ident: square
@              tid:4        |           |                       |     |     +- expr:35
@              tid:4        |           |                       |     |        +- Number: 1
@   sid:37     tid:4        |           |                       |     +- ident=y
@              tid:4        |           |                       +- expr:39
@   sid:37     tid:4        |           |                          +- Access
@              tid:8        |           |                             +- lhs:expr:38
@   sid:40     tid:8        |           |                             |  +- Ident: s0
@   sid:37     tid:4        |           |                             +- ident=y
                            |           +- stmt:13
@              tid:1        |              +- Ret
@              tid:1        |                 +- expr:44
@              tid:1        |                    +- Call
@             tid:16        |                       +- callee:expr:42
@   sid:32    tid:16        |                       |  +- Ident: print
                            |                       +- params
@              tid:4        |                          +- expr:43
@   sid:41     tid:4        |                             +- Ident: area
                            +- stmt:21
=    sid:3     tid:1           +- Namespace name=std
                                  +- stmt:15
=   sid:11     tid:1              |  +- Annotation name=native
                                  +- stmt:16
=    sid:4     tid:1              |  +- Namespace name=booleans
                                  |     +- stmt:29
=   sid:29    tid:13              |        +- Fn name=print (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:42     tid:3              |           |  +- b: core.boolean
@              tid:1              |           +- ret=[]
                                  +- stmt:17
=    sid:5     tid:1              |  +- Namespace name=env
                                  |     +- stmt:28
=   sid:30    tid:14              |        +- Fn name=args (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params=[]
@              tid:6              |           +- ret=std.list.List
                                  +- stmt:18
=    sid:6     tid:1              |  +- Namespace name=list
                                  |     +- stmt:26
=    sid:7     tid:6              |     |  +- Struct name=List (native)
                                  |     +- stmt:27
=   sid:31    tid:15              |        +- Fn name=list_get (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:43     tid:6              |           |  +- list: List
=   sid:44     tid:4              |           |  +- index: number
@              tid:7              |           +- ret=std.str.string
                                  +- stmt:19
=    sid:8     tid:1              |  +- Namespace name=numbers
                                  |     +- stmt:24
=   sid:32    tid:16              |     |  +- Fn name=print (native)
                                  |     |     +- annotations
@   sid:11     tid:1              |     |     |  +- std.native
                                  |     |     +- params
=   sid:45     tid:4              |     |     |  +- n: core.number
@              tid:1              |     |     +- ret=[]
                                  |     +- stmt:25
=   sid:33    tid:17              |        +- Fn name=number_parse (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:46     tid:7              |           |  +- s: std.str.string
@              tid:2              |           +- ret=core.number
                                  +- stmt:20
=    sid:9     tid:1                 +- Namespace name=str
                                        +- stmt:22
=   sid:10     tid:7                    |  +- Struct name=string (native)
                                        +- stmt:23
=   sid:34    tid:18                       +- Fn name=print (native)
                                              +- annotations
@   sid:11     tid:1                          |  +- std.native
                                              +- params
=   sid:47     tid:7                          |  +- s: string
@              tid:1                          +- ret=[]

--- types ---
tid:0     invalid
tid:1     void
tid:2     none
tid:3     boolean
tid:4     number
tid:5     type
tid:6     struct sid:7
tid:7     struct sid:10
tid:8     struct sid:12
tid:9     f(4, 4): 4
tid:10    f(4, 4): 3
tid:11    f(3, 3): 3
tid:12    f(4): 4
tid:13    f(3): 1
tid:14    f(): 6
tid:15    f(6, 4): 7
tid:16    f(4): 1
tid:17    f(7): 4
tid:18    f(7): 1
tid:19    f(): 1
tid:20    [tid:8; len:2]

--- structs ---
sid:7     List
sid:10    string
sid:12    Point
