hir/src/snapshots/transmute_hir__hir_print__tests__arrays_simple.snap
---
source: hir/src/hir_print.rs
expression: s
---
                      +- stmt:0
=    sid:1     tid:1     +- Namespace name=<root>
                            +- stmt:1
=    sid:2     tid:1        |  +- Namespace name=core
                            |     +- stmts=[]
                            +- stmt:10
=   sid:34    tid:18        |  +- Fn name=main
                            |     +- annotations=[]
                            |     +- params=[]
@              tid:1        |     +- ret=[]
@              tid:2        |     +- body:expr:37
@              tid:2        |        +- Block
                            |           +- stmt:6
=   sid:35     tid:4        |           |  +- Let name=n
@              tid:4        |           |     +- expr:6
@              tid:4        |           |        +- Call
@             tid:16        |           |           +- callee:expr:0
@   sid:32    tid:16        |           |           |  +- Ident: number_parse
                            |           |           +- params
@              tid:7        |           |              +- expr:5
@              tid:7        |           |                 +- Call
@             tid:14        |           |                    +- callee:expr:1
@   sid:30    tid:14        |           |                    |  +- Ident: list_get
                            |           |                    +- params
@              tid:6        |           |                       +- expr:3
@              tid:6        |           |                       |  +- Call
@             tid:13        |           |                       |     +- callee:expr:2
@   sid:29    tid:13        |           |                       |     |  +- Ident: args
                            |           |                       |     +- params=[]
@              tid:4        |           |                       +- expr:4
@              tid:4        |           |                          +- Number: 1
                            |           +- stmt:7
=   sid:36    tid:19        |           |  +- Let name=a
@             tid:19        |           |     +- expr:12
@             tid:19        |           |        +- ArrayInstantiate
@              tid:4        |           |           +- expr:7
@   sid:35     tid:4        |           |           |  +- Ident: n
@              tid:4        |           |           +- expr:8
@              tid:4        |           |           |  +- Number: 0
@              tid:4        |           |           +- expr:11
@              tid:4        |           |              +- Call
@              tid:8        |           |                 +- callee:expr:44
@   sid:27     tid:8        |           |                 |  +- Ident: add
                            |           |                 +- params
@              tid:4        |           |                    +- expr:9
@   sid:35     tid:4        |           |                    |  +- Ident: n
@              tid:4        |           |                    +- expr:10
@              tid:4        |           |                       +- Number: 2
                            |           +- stmt:8
@              tid:4        |           |  +- Expression
@              tid:4        |           |     +- expr:19
@              tid:4        |           |        +- Assignment
@              tid:4        |           |           +- target:expr:15
@              tid:4        |           |           |  +- ArrayAccess
@             tid:19        |           |           |     +- expr:13
@   sid:36    tid:19        |           |           |     |  +- Ident: a
@              tid:4        |           |           |     +- expr:14
@              tid:4        |           |           |        +- Number: 1
@              tid:4        |           |           +- value:expr:18
@              tid:4        |           |              +- Call
@              tid:8        |           |                 +- callee:expr:45
@   sid:27     tid:8        |           |                 |  +- Ident: add
                            |           |                 +- params
@              tid:4        |           |                    +- expr:16
@   sid:35     tid:4        |           |                    |  +- Ident: n
@              tid:4        |           |                    +- expr:17
@              tid:4        |           |                       +- Number: 1
                            |           +- stmt:9
@              tid:1        |              +- Ret
@              tid:1        |                 +- expr:36
@              tid:1        |                    +- Call
@             tid:15        |                       +- callee:expr:20
@   sid:31    tid:15        |                       |  +- Ident: print
                            |                       +- params
@              tid:4        |                          +- expr:35
@              tid:4        |                             +- Call
@              tid:8        |                                +- callee:expr:49
@   sid:27     tid:8        |                                |  +- Ident: add
                            |                                +- params
@              tid:4        |                                   +- expr:29
@              tid:4        |                                   |  +- Call
@              tid:8        |                                   |     +- callee:expr:47
@   sid:27     tid:8        |                                   |     |  +- Ident: add
                            |                                   |     +- params
@              tid:4        |                                   |        +- expr:23
@              tid:4        |                                   |        |  +- ArrayAccess
@             tid:19        |                                   |        |     +- expr:21
@   sid:36    tid:19        |                                   |        |     |  +- Ident: a
@              tid:4        |                                   |        |     +- expr:22
@              tid:4        |                                   |        |        +- Number: 0
@              tid:4        |                                   |        +- expr:28
@              tid:4        |                                   |           +- ArrayAccess
@             tid:19        |                                   |              +- expr:24
@   sid:36    tid:19        |                                   |              |  +- Ident: a
@              tid:4        |                                   |              +- expr:27
@              tid:4        |                                   |                 +- Call
@              tid:8        |                                   |                    +- callee:expr:46
@   sid:27     tid:8        |                                   |                    |  +- Ident: add
                            |                                   |                    +- params
@              tid:4        |                                   |                       +- expr:25
@              tid:4        |                                   |                       |  +- Number: 0
@              tid:4        |                                   |                       +- expr:26
@              tid:4        |                                   |                          +- Number: 1
@              tid:4        |                                   +- expr:34
@              tid:4        |                                      +- ArrayAccess
@             tid:19        |                                         +- expr:30
@   sid:36    tid:19        |                                         |  +- Ident: a
@              tid:4        |                                         +- expr:33
@              tid:4        |                                            +- Call
@              tid:8        |                                               +- callee:expr:48
@   sid:27     tid:8        |                                               |  +- Ident: add
                            |                                               +- params
@              tid:4        |                                                  +- expr:31
@              tid:4        |                                                  |  +- Number: 1
@              tid:4        |                                                  +- expr:32
@              tid:4        |                                                     +- Number: 1
                            +- stmt:17
=    sid:3     tid:1           +- Namespace name=std
                                  +- stmt:11
=   sid:11     tid:1              |  +- Annotation name=native
                                  +- stmt:12
=    sid:4     tid:1              |  +- Namespace name=booleans
                                  |     +- stmt:25
=   sid:28    tid:12              |        +- Fn name=print (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:37     tid:3              |           |  +- b: core.boolean
@              tid:1              |           +- ret=[]
                                  +- stmt:13
=    sid:5     tid:1              |  +- Namespace name=env
                                  |     +- stmt:24
=   sid:29    tid:13              |        +- Fn name=args (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params=[]
@              tid:6              |           +- ret=std.list.List
                                  +- stmt:14
=    sid:6     tid:1              |  +- Namespace name=list
                                  |     +- stmt:22
=    sid:7     tid:6              |     |  +- Struct name=List (native)
                                  |     +- stmt:23
=   sid:30    tid:14              |        +- Fn name=list_get (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:38     tid:6              |           |  +- list: List
=   sid:39     tid:4              |           |  +- index: number
@              tid:7              |           +- ret=std.str.string
                                  +- stmt:15
=    sid:8     tid:1              |  +- Namespace name=numbers
                                  |     +- stmt:20
=   sid:31    tid:15              |     |  +- Fn name=print (native)
                                  |     |     +- annotations
@   sid:11     tid:1              |     |     |  +- std.native
                                  |     |     +- params
=   sid:40     tid:4              |     |     |  +- n: core.number
@              tid:1              |     |     +- ret=[]
                                  |     +- stmt:21
=   sid:32    tid:16              |        +- Fn name=number_parse (native)
                                  |           +- annotations
@   sid:11     tid:1              |           |  +- std.native
                                  |           +- params
=   sid:41     tid:7              |           |  +- s: std.str.string
@              tid:2              |           +- ret=core.number
                                  +- stmt:16
=    sid:9     tid:1                 +- Namespace name=str
                                        +- stmt:18
=   sid:10     tid:7                    |  +- Struct name=string (native)
                                        +- stmt:19
=   sid:33    tid:17                       +- Fn name=print (native)
                                              +- annotations
@   sid:11     tid:1                          |  +- std.native
                                              +- params
=   sid:42     tid:7                          |  +- s: string
@              tid:1                          +- ret=[]

--- types ---
tid:0     invalid
tid:1     void
tid:2     none
tid:3     boolean
tid:4     number
tid:5     type
tid:6     struct sid:7
tid:7     struct sid:10
tid:8     f(4, 4): 4
tid:9     f(4, 4): 3
tid:10    f(3, 3): 3
tid:11    f(4): 4
tid:12    f(3): 1
tid:13    f(): 6
tid:14    f(6, 4): 7
tid:15    f(4): 1
tid:16    f(7): 4
tid:17    f(7): 1
tid:18    f(): 1
tid:19    [tid:4; len:3]

--- structs ---
sid:7     List
sid:10    string
